Fixing Dark Mode

--- a/themes/zymdocsy/assets/scss/_darkmode.scss
+++ b/themes/zymdocsy/assets/scss/_darkmode.scss
@@ -1,4 +1,4 @@
-body.dark-mode,
+.dark-mode,
 body.dark-mode {
   background: rgb(45, 45, 45);
   color: #f5f5f5;
